# remote_desktop

./: .gitignore  Cargo.toml  Dockerfile  README.md  Readme.txt  Relese-ddd-pipeline.yml
.github/workflows/: update-readme.yml
nginx/: nginx.conf
src/: client.rs  client1.rs  main.rs  run.rs  screen_capture.rs  screen_capture1.rs  server.rs  server1.rs  test.txt  viewer1.rs
src/helpers/: constraint.rs  enum_impl.rs  enums.rs  mod.rs  types.rs  ws_functions.rs
src/helpers/constraint/: constraint.rs  flags.rs  mod.rs
src/helpers/lock/: addr.rs  broad_cast.rs  client_buffer.rs  mod.rs  oncelock.rs  test.rs  users.rs
src/models/: mod.rs  share.rs  share_impl.rs  stream_data.rs  stream_data_impl.rs  user.rs  user_impl.rs
src/modules/: mod.rs
src/modules/admin/: admin.rs  mod.rs
src/modules/admin/handler/: handle_binary_events.rs  mod.rs  ws_events.rs
src/modules/admin/validation/: mod.rs  msg_validation.rs
src/modules/client/: client.rs  client_fl.rs  mod.rs
src/modules/client/handler/: mod.rs  ss_start.rs  ws_events.rs
src/modules/client/validation/: mod.rs  msg_validation.rs  test.rs
src/modules/screen_capture/: mod.rs  screen_capture.rs  screen_capture_fl.rs
src/modules/server/: config.rs  connection.rs  functions.rs  mod.rs  server.rs  server_fl.rs  validation.rs  ws.rs
src/modules/server/handler/: client_fram_size.rs  handle_ss_req.rs  handle_ss_stream.rs  handle_ws_events.rs  mod.rs
src/modules/server/validations/: connection_validation.rs  mod.rs  msg_validation.rs  ss_req_res_validation.rs  (+2 more)
src/modules/viewer/: mod.rs  viewer_fl.rs
