[package]
name = "remote_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
scrap = "0.5"
tokio = { version = "1.0", features = ["full"] }
image = "0.24"

minifb = "0.27"

anyhow = "1.0"
tokio-tungstenite = "0.26"
futures-util = "0.3"
url = "2.5"

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

indexmap = "2.6"
